# Saathi-Legal-Assistant

./: .env.example  .env.template  .gitignore  .vercelignore  DEPLOYMENT_CHECKLIST.md  DEVICE_COMPATIBILITY_SOLUTION.md  ENHANCED_FEATURES_GUIDE.md  PRODUCTION_CHECKLIST.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  README_COMPREHENSIVE.md  TESTING_GUIDE.md  agreement_templates.html  analytics.js  anon-id.js  app_gemini.py  app_production.py  calculator.html  case_tracker.html  chat-styles.css  chat.html  connection_test.html  consent-modal.js  consent_logs.jsonl  consent_required.html  consumer-dispute-guide.html  debug_app.py  device-compatibility.css  device-test.html  device_compatibility.py  document_generator.py  document_templates.py  employment-rights-guide.html  enhanced-ux.css  enhanced-ux.js  government_forms.html  gunicorn.conf.py  landing.html  language_selection.html  (+27 more)
api/: index.py
apps/ai-python/: Dockerfile  requirements.txt  wsgi.py
apps/ai-python/app/: main.py
apps/ai-python/tests/: test_health.py
apps/backend-laravel/: README_V2.md  composer.json
apps/backend-laravel/bootstrap/: app.php
backend/: .env.example  app.py  chatbot.py  config.py  multilingual_chatbot.py  pdf_generator.py  requirements.txt  rights_calculator.py  test_api.py  test_calculator.py
docs/: API_CONTRACT_V2.md  ARCHITECTURE_V2.md  MIGRATION_PLAN_V2.md
frontend/: App.js  package-lock.json  package.json
frontend/screens/: ChatbotScreen.js  HomeScreen.js
infra/: docker-compose.yml
tests/: test_government_forms.py
use_cases/: government_forms_catalog.json
(+50 files in other folders)
