[project]
name = "saathi-legal-assistant"
version = "0.1.0"
description = "Legal assistant Flask app"
requires-python = ">=3.10"

dependencies = [
"flask>=3.0.0",
"flask-cors>=5.0.0",
"requests>=2.31.0",
"reportlab>=4.0.0",
"pypdf>=5.0.0",
"python-docx>=1.1.0",
"werkzeug>=3.0.0",
"pymongo>=4.6.0",
"flask-limiter>=3.8.0",
"flask-talisman>=1.1.0"
]

[tool.vercel]
entrypoint = "app_production:app"
